<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Quixicon 2</string>
    <string name="app_title">Quixicon</string>
    <string name="title_activity_main">Collections</string>
    <string name="app_video">zCKmU_2GjvA</string>
    <string name="tg_chat">vantropov</string>
    <string name="action_settings">Settings</string>
    <string name="action_tests">Test</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_app">About app</string>
    <string name="title_activity_donation">Donation</string>
    <string name="sample_data_base">Database Example</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete all tables</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_setup">Settings</string>
    <string name="already_exist">This field is already exists</string>
    <string name="is_empty">You have to fill this field</string>
    <string name="collection_name">Collection name</string>
    <string name="collection_description">Description</string>
    <string name="add_collection">Create Collection</string>
    <string name="create_your_collection">Create your collection</string>
    <string name="delete">Delete</string>
    <string name="rename">Edit</string>
    <string name="rename_collection">Rename collection</string>
    <string name="update">Update</string>
    <string name="install_collection">Install collection</string>
    <string name="add_card">Add Card</string>
    <string name="edit_card">Edit Card</string>
    <string name="Original">Word</string>
    <string name="Translation">Translation</string>
    <string name="Transcription">Transliteration</string>
    <string name="Context">Example</string>
    <string name="Question">Question</string>
    <string name="Answer">Answer</string>
    <string name="Save">Save</string>
    <string name="your_translation">Your Translation: </string>
    <string name="have_to_translate">You have to fill this field</string>
    <string name="correct_translation">Correct Translation: </string>
    <string name="button_check">Check</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="version">Version</string>
    <string name="open">Open</string>
    <string name="delete_title">Confirm Delete</string>
    <string name="delete_collection">You are going to delete the collection with all flashcards.</string>
    <string name="delete_card">Do you want to delete the flashcard from this collection?</string>
    <string name="delete_card_super">Are you sure you want to delete this flashcard from ALL collections?</string>
    <string name="info_collections_title">Associated collections</string>
    <plurals name="n_words">
        <item quantity="zero" />
        <item quantity="one">%1$d word</item>
        <item quantity="two">%1$d words</item>
        <item quantity="few">%1$d words</item>
        <item quantity="many">%1$d words</item>
        <item quantity="other">%1$d words</item>
    </plurals>
    <plurals name="n_phrases">
        <item quantity="zero" />
        <item quantity="one">%1$d phrase</item>
        <item quantity="two">%1$d phrases</item>
        <item quantity="few">%1$d phrases</item>
        <item quantity="many">%1$d phrases</item>
        <item quantity="other">%1$d phrases</item>
    </plurals>
    <plurals name="n_rules">
        <item quantity="zero" />
        <item quantity="one">%1$d rule</item>
        <item quantity="two">%1$d rules</item>
        <item quantity="few">%1$d rules</item>
        <item quantity="many">%1$d rules</item>
        <item quantity="other">%1$d rules</item>
    </plurals>
    <string name="all_words">All words</string>
    <string name="all_phrases">All phrases</string>
    <string name="all_rules">All rules</string>
    <string name="word1">word</string>
    <string name="phrase1">phrase</string>
    <string name="rule1">rule</string>
    <string name="extra_fields">Additional fields</string>
    <string name="features">• Create flash cards\n• Explore collections\n• Learn and test yourself</string>
    <string name="menu_notifications">News</string>
    <string name="menu_knowledge">Knowledge base</string>
    <string name="menu_import">Import collections</string>
    <string name="menu_language">Change languages</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About app</string>
    <string name="menu_donate">Donate to app development</string>
    <string name="menu_review">Write a review on Google Play</string>
    <string name="menu_video">Video tutorial</string>
    <string name="menu_telegram">Ask a question</string>
    <string name="menu_follow">Follow us</string>
    <string name="lang_title">Select Languages</string>
    <string name="lang_study">You study:</string>
    <string name="lang_interface">App language:</string>
    <string name="lang_student">You know well:</string>
    <string name="lang_target">Collection language</string>
    <string name="lang_select">Select Language</string>
    <string name="lang_error_msg_1">There is no language set for this collection. Text-to-speech function does not work. </string>
    <string name="lang_error_msg_2">Your phone does not have a package for voice playback of the selected language (%s). Explore text-to-speech settings on your Android.</string>
    <string name="lang_error_open">Open settings</string>
    <string name="lang_select_later">Select later</string>
    <string name="lang_select_no">Not selected</string>
    <string name="context_delete">Delete</string>
    <string name="context_edit">Edit</string>
    <string name="context_edit_card">Edit</string>
    <string name="context_set">Knowledge 100%</string>
    <string name="context_reset">Knowledge 0%</string>
    <string name="context_copy">Copy to&#8230;</string>
    <string name="context_info">Information</string>
    <string name="context_export">Save to file</string>
    <string name="donation_info">If you like our app you can donate any amount.</string>
    <string name="donation_thanks">Thank You!</string>
    <string name="donation_thanks_great">Many thanks for your help!</string>
    <string name="default_notification_channel_id">Default Channel</string>
    <string name="default_notification_channel_name">All notifications</string>
    <string name="notification_install">Add Collection</string>
    <string name="notification_install_message">Are you sure you want to add this collection?</string>
    <string name="notification_delete">Delete</string>
    <string name="notification_delete_message">Are you sure you want to delete this?</string>
    <string name="notification_read_more">More…</string>
    <string name="notification_inactive">It\'s a good day to learn new words!</string>
    <plurals name="notification_news">
        <item quantity="zero" />
        <item quantity="one">%1$d new collection is available to you.</item>
        <item quantity="two">%1$d new collections are available to you</item>
        <item quantity="few">%1$d new collections are available to you</item>
        <item quantity="many">%1$d new collections are available to you</item>
        <item quantity="other">%1$d new collections are available to you</item>
    </plurals>
    <string name="notification_question">Do you know the translation (answer)? </string>
    <string name="notification_correct">Yes</string>
    <string name="notification_wrong">No</string>
    <string name="notification_position">Quick test — %d / %d</string>
    <string name="notification_info_title">Quick test helps you study</string>
    <string name="notification_info_message">You can disable it in the app settings</string>
    <string name="notification_info_about">About Quick Test</string>
    <string name="catalog_copy">Copy to:</string>
    <string name="search_hint">Search</string>
    <string name="swipe_edit">Enable swipe edit of cards</string>
    <string name="copy_to">If you swipe the card to the right, it will be copied to</string>
    <string name="select_action">Select an action for swiping cards to the left</string>
    <string name="swipe_left">Swipe left</string>
    <string name="swipe_right">Swipe right</string>
    <string name="swipe_right_empty">Only the current collection exists. To copy, you need to create another one.</string>
    <string name="catalog_empty">
        <![CDATA[
        <h3>You don\'t have any flash cards<br>in this collection</h3>
        <p><br>Add cards manually<br>by clicking<br><a href="NEW_CARD"><img src="ic_add_box_purple_24dp"></a></p>
        <p><br>or copy words from another collection</p>
        ]]>
    </string>
    <string name="catalog_words_description">You can find here all words from all collections including Big Dictionary</string>
    <string name="catalog_phrases_description">You can find here all phrases from all collections</string>
    <string name="catalog_rules_description">You can find here all rules from all collections</string>
    <string name="option_set_100">Set knowledge to 100%</string>
    <string name="option_set_0">Set knowledge to 0%</string>
    <string name="option_delete">Delete it</string>
    <string name="title_activity_import">Import Collections</string>
    <string name="tab_text_1">Basic</string>
    <string name="tab_text_2">Premium</string>
    <string name="import_server">Download collections from server</string>
    <string name="sort_abc">Alphabetically</string>
    <string name="sort_date_desc">By date (new first)</string>
    <string name="sort_date_asc">By date (old first)</string>
    <string name="sort_default">Default</string>
    <string name="sort_type">By card type</string>
    <string name="sort_rate_asc">Knowledge (less first)</string>
    <string name="sort_rate_desc">Knowledge (more first)</string>
    <string name="settings_use_dark">Use dark theme</string>
    <string name="settings_draw_on">Draw answers possibility</string>
    <string name="settings_show_global">Show global collections</string>
    <string name="settings_ui">User interface</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_use_notification">Ask questions in notifications </string>
    <string name="settings_notification_source">Use the words from:</string>
    <string name="settings_notification_description">We have a special feature - to check the knowledge of the word in notifications if you do not use the application. Just 5 words a day.</string>
    <string name="settings_source_select">Select collection:</string>
    <string name="settings_notification_start"><u>Run test in notification</u></string>
    <string name="settings_filter">Filter</string>
    <string name="settings_filter_subject">Filter collections by target language</string>
    <string name="settings_target_language">Target language:</string>
    <string name="intro_test">
        <![CDATA[
        <h3>Testing knowledge of words is the main study method</h3>
        <p>To get acquainted, we will check the knowledge of <big><strong>10</strong></big> words from the starter collection.</p>
        <h3>What to do?</h3>
        <p>You will see a word / phrase / question. <strong>Imagine</strong> the answer in your mind and <strong>touch the eye icon</strong> to view the answer.<br><img src="test_en"></p>
	    <p>You will decide if your answer was correct. If it was - swipe the card right, if you were mistaken or just didn’t know – swipe left. There are also buttons at the bottom to use instead of swiping.</p>
        ]]>
    </string>
</resources>