<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:id="@+id/group_main" android:checkableBehavior="none">
        <item android:title="@string/action_settings"
            android:icon="@drawable/ic_settings"
            android:id="@+id/item_settings" />
        <item android:title="@string/menu_import"
            android:icon="@drawable/ic_outline_cloud_download_24"
            android:id="@+id/item_import" />
        <item android:title="@string/menu_help"
            android:icon="@drawable/ic_help_white_24dp"
            android:id="@+id/item_help" />
    </group>

    <group
        android:id="@+id/group_extra"
        android:checkableBehavior="none"
        android:visible="true">
        <item
            android:id="@+id/item_follow"
            android:icon="@drawable/ic_feed"
            android:title="@string/menu_follow" />
        <item
            android:id="@+id/item_support"
            android:icon="@drawable/ic_telegram"
            android:title="@string/menu_telegram" />
        <item
            android:id="@+id/item_review"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_review" />
    </group>


</menu>
