<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.victorblog.memorycards.MainActivity.MainActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_library_add_white_24dp"
        android:orderInCategory="103"
        android:title="@string/add_collection"
        app:showAsAction="always"/>

    <item android:title="@string/action_sort"
        android:id="@+id/action_sort"
        android:orderInCategory="105"
        app:showAsAction="always"
        android:icon="@drawable/ic_sort_white_24dp">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/action_sort_az"
                android:title="@string/sort_abc"/>
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_date_desc"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/action_help"
        android:id="@+id/action_help"
        app:showAsAction="always"
        android:orderInCategory="104"
        android:icon="@drawable/ic_help_white_24dp"
        tools:ignore="AlwaysShowAction" />
</menu>